--- a/src/main/resources/templates/messages/index.html
+++ b/src/main/resources/templates/messages/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>ChatApp</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+  <!-- 「normalize.css」:メジャーなリセットCSSのひとつ。詳細はnormalize.cssの公式GitHub参照 -->
 </head>
 <body>
   <h1>トップページ</h1>
