--- a/src/main/resources/templates/messages/index.html
+++ b/src/main/resources/templates/messages/index.html
@@ -5,6 +5,8 @@
   <title>ChatApp</title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
   <!-- 「normalize.css」:メジャーなリセットCSSのひとつ。詳細はnormalize.cssの公式GitHub参照 -->
+  <link rel="stylesheet" th:href="@{/css/style.css}" />
+
 </head>
 <body>
   <h1>トップページ</h1>
