--- a/src/main/resources/templates/messages/index.html
+++ b/src/main/resources/templates/messages/index.html
@@ -9,6 +9,8 @@
 
 </head>
 <body>
-  <h1>トップページ</h1>
-</body>
+  <div class="wrapper">
+    <div th:insert="~{side_bar :: side_bar}"></div>
+    <div th:insert="~{main_chat :: main_chat}"></div>
+  </div></body>
 </html>
