--- a/src/main/resources/templates/messages/index.html
+++ b/src/main/resources/templates/messages/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
   <div class="wrapper">
-    <div th:insert="~{side_bar :: side_bar}"></div>
-    <div th:insert="~{main_chat :: main_chat}"></div>
-  </div></body>
+    <div class="side_bar">
+      <div th:insert="~{side_bar :: side_bar}"></div>
+    </div>
+    <div class="chat">
+      <div th:insert="~{main_chat :: main_chat}"></div>
+    </div> 
+  </div>
+</body>
 </html>
