--- a/src/main/resources/templates/side_bar.html
+++ b/src/main/resources/templates/side_bar.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ja">
 <div th:fragment="side_bar">
-  ＜サイドバー＞
-</div>
+  <div class="side-bar-header">
+  </div>
+
+  <div class="rooms">
+  </div></div>
 </html>
