ユーザー編集機能の実装

--- a/src/main/resources/templates/side_bar.html
+++ b/src/main/resources/templates/side_bar.html
@@ -3,7 +3,7 @@
 <div th:fragment="side_bar">
   <div class="side-bar-header">
     <div class="header-name">
-      <a th:href="@{/users/{userId}/edit(userID=${user.id})}" th:text="$(user.name)">ユーザ名</a>
+      <a th:href="@{/users/{userId}/edit(userId=${user.id})}" th:text="${user.name}">ユーザ名</a>
     </div>
     <div class="create-room">
       <a href="#">チャットを作成する</a>
