--- a/src/main/resources/templates/side_bar.html
+++ b/src/main/resources/templates/side_bar.html
@@ -6,20 +6,15 @@
       <a th:href="@{/users/{userId}/edit(userId=${user.id})}" th:text="${user.name}">ユーザ名</a>
     </div>
     <div class="create-room">
-      <a href="#">チャットを作成する</a>
+      <a th:href="@{/rooms/new}">チャットを作成する</a>
     </div>
   </div>
 
   
   <div class="rooms">
-    <div class="room">
+    <div th:each="room : ${rooms}" class="rooms">
       <div class="room-name">
-        <a href="#">techroom1</a>
-      </div>
-    </div>
-    <div class="room">
-      <div class="room-name">
-        <a href="#">techroom2</a>
+        <a href="#" th:text="${room.name}">techroom</a>
       </div>
     </div>
   </div>
