--- a/src/main/resources/templates/side_bar.html
+++ b/src/main/resources/templates/side_bar.html
@@ -12,9 +12,9 @@
 
   
   <div class="rooms">
-    <div th:each="room : ${rooms}" class="rooms">
+    <div th:each="room : ${rooms}"  class="room">
       <div class="room-name">
-        <a href="#" th:text="${room.name}">techroom</a>
+        <a th:href="@{/rooms/{roomId}/messages(roomId=${room.id})}" th:text="${room.name}">techroom</a>
       </div>
     </div>
   </div>
