チャットルーム名の表示

--- a/src/main/resources/templates/main_chat.html
+++ b/src/main/resources/templates/main_chat.html
@@ -3,9 +3,7 @@
 <div th:fragment="main_chat">
   <div class="chat-header">
     <div class="left-header">
-      <div class="header-title">
-        hogefuga
-      </div>
+      <div class="header-title" th:text="${room.name}">ルーム名</div>
     </div>
     <div class="right-header">
       <div class="header-button">
