--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -72,14 +72,23 @@
 }
 
 .header-button {
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
-.header-button a {
+/* .header-button a {
   text-decoration: none;
   border: 1px solid darkred;
   color: darkred;
   padding: 20px;
+} */
+
+.header-button input[type="submit"] {
+  text-decoration: none;
+  border: 1px solid darkred;
+  color: darkred;
+  background-color: #fff;
+  padding: 20px;
+  cursor: pointer;
 }
 
 .messages {
